# burn-magika

./: .gitignore  AUDIT.md  Cargo.toml  PROJECT_SPEC.md  README.md  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml
benches/: inference.rs
crates/magika-burn/: Cargo.toml
crates/magika-burn-tests/: Cargo.toml
crates/magika-burn-tests/src/: lib.rs
crates/magika-burn-tests/tests/: magika_parity.rs
crates/magika-burn/src/: config.rs  lib.rs  preprocess.rs  runtime.rs
scripts/: check.sh  update_vendor.sh
src/: file.rs  lib.rs  model.rs  preprocess.rs  session.rs
tests/: magika_parity.rs  mod.rs
